# Temporal-robot-project

./: .gitignore  Makefile  docker-compose.yml  dockerfile
ai-agent/: main.py  pyproject.toml
ai-agent/agent/: flow.py
ai-agent/interfaces/rest/: rest_server.py
ai-agent/interfaces/rest/routers/: flow_agent.py
backend/: go.mod  go.sum
backend/cmd/rest-server/: config.go  database.go  handlers.go  helper.go  main.go  routes.go  schedules.go  workflows.go
backend/cmd/robot-server/: main.go
backend/cmd/robot-workflow/: main.go
backend/internal/activities/: activity.go  client.go  move.go  sitdown.go  standup.go  status.go  tts.go
backend/internal/activity/: activity.go  client.go  execute_helper.go  head.go  move.go  sitdown.go  standup.go  status.go  tts.go
backend/internal/api/: router.go
backend/internal/database/: database.go  models.go
backend/internal/workflow/: workflow.go
backend/pkg/: types.go
backend/robot_action/worker/: main.go
backend/robot_routine/client/: main.go
backend/robot_routine/worker/: main.go
backend/robot_routine/workflows/: robot_routine.go
backend/shared_activities/: sleep.go  types.go
backend/test/: create-schedule.http  get-workflow-status.http  get-workflow.http  save-workflow.http  send-workflow.http
backend/test/activities/: get-activities.http
backend/utils/: math_helper.go
data/: sema.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
robot_action/client/: main.go
robot_action/workflows/: robot_action.go
shared_activities/: robot.go  standup.go
(+117 files in other folders)
